--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My-react-app</title>
+  <link rel="shortcut icon" href="/src/assets/Logos/favicon.ico" type="image/x-icon">
+  <title>Royal Venture Limited</title>
 </head>
 
 <body>
