--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/src/assets/Logos/favicon.ico" type="image/x-icon">
-  <title>Royal Venture Limited</title>
+  <title>Home | Royal Venture Limited</title>
 </head>
 
 <body>
